--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ crash.*.log
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
-override.tf
+override.tfqq
 override.tf.json
 *_override.tf
 *_override.tf.json
